--- a/sevntu-checks/src/main/resources/com/github/sevntu/checkstyle/checks/coding/messages.properties
+++ b/sevntu-checks/src/main/resources/com/github/sevntu/checkstyle/checks/coding/messages.properties
@@ -73,8 +73,9 @@ multiple.variable.declarations=Only one variable definition per line allowed.
 multiple.variable.declarations.comma=Each variable declaration must be in its own statement.
 nested.if.depth=Nested if-else depth is {0,number,integer} (max allowed is {1,number,integer}).
 nested.try.depth=Nested try depth is {0,number,integer} (max allowed is {1,number,integer}).
-nested.ternary=Nested ternary operator should be avoided.
 no.null.for.collections=Method should return empty collection instead of null.
+expression.ternary=More than {0} ternary operators in expression.
+forbid.tokens.at.line.end=The token [{0}] must be on the new line.
 overridable.method=Overridable method ''{0}'' is called in {1} body.
 overridable.method.leads=Calling the method ''{0}'' in {1} body leads to the call of the overridable method ''{2}''.
 parameter.assignment=Assignment of parameter ''{0}'' is not allowed.
